video/jellyfin/ingress-wildcard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    # forbid access outside of LAN
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
    # nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  ingressClassName: nginx
  tls:
  - secretName: AUTOMATIC_REPLACE
  rules:
  - host: jellyfin.suffix-automatic-replace
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              name: http
